# edgar-client

./: README.md  pyproject.toml
edgar_client/: client.py
